added a styles sheet and attempting to link a main image of representative

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <article class="my_representative">
         <section class="basic_info">
-            representative image:https://www.govtrack.us/static/legislator-photos/412818-200px.jpeg
+            <link rel="image" href="styles.css"></href>
         </section>
         <section class="basic_info">
             name: John Rose
